--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <nav class="navbar">
-      <div class="logo">YourName</div>
+      <div class="logo">achi</div>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Me</a></li>
@@ -23,7 +23,7 @@
 
   <main class="hero-section">
     <div class="hero-content">
-      <h1>Hi, I'm [Your Name]</h1>
+      <h1>Hi, I'm Achilles Maling</h1>
       <p>Welcome to my personal portfolio website.</p>
       <a href="portfolio.html" class="btn">View My Work</a>
     </div>
