--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
   </header>
 
   <main class="hero-section">
+     <video autoplay muted loop playsinline class="bg-video">
+    <source src="videos/tell em _ valorant edit.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
     <div class="hero-content">
       <h1>Hi, I'm Achilles Maling</h1>
       <p>Welcome to my personal portfolio website.</p>
