--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <main class="hero-section">
      <video autoplay muted loop playsinline class="bg-video">
-    <source src="videos/tell em _ valorant edit.mp4" type="video/mp4">
+    <source src="videos/Background.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
     <div class="hero-content">
@@ -34,7 +34,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Your Name. All rights reserved.</p>
+    <p>&copy; 2025 Achilles Maling. All rights reserved.</p>
   </footer>
 </body>
 </html>
