--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <nav class="navbar">
       <div class="logo">xNi</div>
       <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Me</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="skills.html">Skills</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/about/about.html">About Me</a></li>
+        <li><a href="/portfolio/portfolio.html">Portfolio</a></li>
+        <li><a href="/skills/skills.html">Skills</a></li>
+        <li><a href="/contact/contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -29,7 +29,7 @@
     <div class="hero-content">
       <h1>Hi, I'm Achilles Maling</h1>
       <p>Welcome to my personal portfolio website.</p>
-      <a href="portfolio.html" class="btn">View My Work</a>
+      <a href="portfolio/portfolio.html" class="btn">View My Work</a>
     </div>
   </main>
 
