--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -24,7 +24,7 @@
 
     <!-- Project 1 (ScreenShot) --> 
     <div class="portfolio-item">
-      <img src="C:\Users\xfx\Documents\GitHub\luvkapoipoiloves.github.io\images/Bandimg.png" alt="Agoraphobes Logo">
+      <img src="images/Bandimg.png" alt="Agoraphobes Logo">
       <div class="item-info">
         <h2>Band Leader</h2>
         <p>Leader of the band 'Agoraphobes'. Agoraphobes is an upcoming alternative rock band in the music world. 
@@ -35,11 +35,11 @@
     <!-- Project 2 (Video) -->
     <div class="portfolio-item">
       <video controls>
-        <source src="" type="">
+        <source src="videos/portfoliovideo.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
       <div class="item-info">
-        <h2>Project Title 2</h2>
+        <h2>Guitar Content Creator</h2>
         <p>A demo of the project in action.</p>
       </div>
     </div>
