--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -40,7 +40,7 @@
       </video>
       <div class="item-info">
         <h2>Guitar Content Creator</h2>
-        <p>A demo of the project in action.</p>
+        <p>I create guitar content strictly for entertainment purposes only. I engage my audience with my guitar skills eyecatching them to trendy music. I mainly post videos on the platform 'Tiktok'. </p>
       </div>
     </div>
 
