--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -43,13 +43,76 @@
         <p>I create guitar content strictly for entertainment purposes only. I engage my audience with my guitar skills eyecatching them to trendy music. I mainly post videos on the platform 'Tiktok'. </p>
       </div>
     </div>
-
-    <!-- Add more projects below -->
     
   </main>
+
+<!-- ✅ Project Showreel (Placed below) -->
+<section class="showreel-section">
+  <h2>Video Editor</h2>
+  <p>These are collections of my commissioned edits</p>
+  
+  <!-- Video Item -->
+   <div class="showreel-grid">
+
+      <!-- Video 1 -->
+    <div class="showreel-item">
+      <div class="video-wrapper">
+        <video loop autoplay muted controls>
+        <source src="videos/Edit1.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+        <div class="video-overlay">
+          <p>This commission was requested by a client to celebrate their milestone of 8000 followers in the platform of twitter which is now known as 'X'</p>
+          <a href="https://x.com/codeHKM/status/1387399704896589826" target="_blank">Watch Full Video</a>
+        </div>
+      </div>
+    </div>
+
+      <!-- Video 2 -->
+    <div class="showreel-item">
+      <div class="video-wrapper">
+       <video loop autoplay muted controls>
+          <source src="" type="video/mp4">
+        </video>
+        <div class="video-overlay">
+          <p>A short breakdown featuring rhythmic patterns and transitions.</p>
+          <a href="" target="_blank">Watch Full Video</a>
+        </div>
+      </div>
+    </div>
+
+      <!-- Video 3 -->
+    <div class="showreel-item">
+      <div class="video-wrapper">
+        <video loop autoplay muted controls>
+          <source src="" type="video/mp4">
+        </video>
+        <div class="video-overlay">
+          <p>A short breakdown featuring rhythmic patterns and transitions.</p>
+          <a href="" target="_blank">Watch Full Video</a>
+        </div>
+      </div>
+    </div>
+
+      <!-- Video 4 -->
+    <div class="showreel-item">
+      <div class="video-wrapper">
+        <video loop autoplay muted controls>
+          <source src="" type="video/mp4">
+        </video>
+        <div class="video-overlay">
+          <p>A short breakdown featuring rhythmic patterns and transitions.</p>
+          <a href="" target="_blank">Watch Full Video</a>
+        </div>
+      </div>
+    </div>
+    
+</div>
+</section>
 
   <footer>
     <p>&copy; 2025 BathSpa University. All rights reserved.</p>
   </footer>
+  
 </body>
 </html>
