--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -62,7 +62,7 @@
         Your browser does not support the video tag.
       </video>
         <div class="video-overlay">
-          <p>This commission was requested by a client to celebrate their milestone of 8000 followers in the platform of twitter which is now known as 'X'</p>
+          <p>This commission was requested by a client to celebrate their milestone of 8000 followers in the platform of twitter which is now known as 'X'.</p>
           <a href="https://x.com/codeHKM/status/1387399704896589826" target="_blank">Watch Full Video</a>
         </div>
       </div>
@@ -72,11 +72,11 @@
     <div class="showreel-item">
       <div class="video-wrapper">
        <video loop autoplay muted controls>
-          <source src="" type="video/mp4">
+          <source src="videos/Edit2.mp4" type="video/mp4">
         </video>
         <div class="video-overlay">
-          <p>A short breakdown featuring rhythmic patterns and transitions.</p>
-          <a href="" target="_blank">Watch Full Video</a>
+          <p>This commission was requested by a client as a gift to their special one. I posted the same video online, the only difference is the person on the edit.  </p>
+          <a href="https://www.instagram.com/p/ChFfqYxrfzg/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank">Watch Full Video</a>
         </div>
       </div>
     </div>
