--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -85,11 +85,11 @@
     <div class="showreel-item">
       <div class="video-wrapper">
         <video loop autoplay muted controls>
-          <source src="" type="video/mp4">
+          <source src="videos/Edit3.mp4" type="video/mp4">
         </video>
         <div class="video-overlay">
-          <p>A short breakdown featuring rhythmic patterns and transitions.</p>
-          <a href="" target="_blank">Watch Full Video</a>
+          <p>This commission was requested by a client as a debut video for their 18th birthday. It showcases a collage of pictures throught their life journey before 18. </p>
+          <a href="https://drive.google.com/file/d/1jg3ovuGQVNqC0z_vEIMEqNxTga2RxmOb/view" target="_blank">Watch Full Video</a>
         </div>
       </div>
     </div>
