--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -98,11 +98,11 @@
     <div class="showreel-item">
       <div class="video-wrapper">
         <video loop autoplay muted controls>
-          <source src="" type="video/mp4">
+          <source src="videos/Edit4.mp4" type="video/mp4">
         </video>
         <div class="video-overlay">
-          <p>A short breakdown featuring rhythmic patterns and transitions.</p>
-          <a href="" target="_blank">Watch Full Video</a>
+          <p>This commission was requested by a company as a farewell video of their lovely manager who is about to resign. This dedicates his hard work for the company that he has done and the last messages from his co-workers and friends in the company.</p>
+          <a href="https://drive.google.com/file/d/1xqnVC6ZR-wRjzDZJ8OMViXKnx4RiagPy/view" target="_blank">Watch Full Video</a>
         </div>
       </div>
     </div>
