--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -106,6 +106,32 @@
         </div>
       </div>
     </div>
+
+      <!-- Video 5 -->
+    <div class="showreel-item">
+      <div class="video-wrapper">
+        <video loop autoplay muted controls>
+          <source src="videos/Edit5.mp4" type="video/mp4">
+        </video>
+        <div class="video-overlay">
+          <p>This commission was requested by a content creator as a celebration of their milestone of 2000 followers in twitter. </p>
+          <a href="https://drive.google.com/file/d/1DxcmzcUUHUqDc3V7ElAGPCxQHi27KBoc/view" target="_blank">Watch Full Video</a>
+        </div>
+      </div>
+    </div>
+
+      <!-- Video 6 -->
+    <div class="showreel-item">
+      <div class="video-wrapper">
+        <video loop autoplay muted controls>
+          <source src="videos/Edit6.mp4" type="video/mp4">
+        </video>
+        <div class="video-overlay">
+          <p>This commission was requested by a content creator as a highlight video for their youtube channel. It showcases highlights from the game 'Valorant' developed by RiotGames.</p>
+          <a href="https://www.youtube.com/watch?v=RcgkXnDAqWU" target="_blank">Watch Full Video</a>
+        </div>
+      </div>
+    </div>
     
 </div>
 </section>
