--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -29,6 +29,7 @@
         <h2>Band Leader</h2>
         <p>Leader of the band 'Agoraphobes'. Agoraphobes is an upcoming alternative rock band in the music world. 
         The name agora comes from the phobic term "Agoraphobia" which is a term of anxiety disorder in which every member of the band have in common.</p>
+        <a href="https://www.instagram.com/agoraphobes.dxb/?utm_source=ig_web_button_share_sheet" target="_blank">Band Profile</a>
       </div>
     </div>
 
@@ -41,6 +42,7 @@
       <div class="item-info">
         <h2>Guitar Content Creator</h2>
         <p>I create guitar content strictly for entertainment purposes only. I engage my audience with my guitar skills eyecatching them to trendy music. I mainly post videos on the platform 'Tiktok'. </p>
+        <a href="https://www.tiktok.com/@achixzi?is_from_webapp=1&sender_device=pc" target="_blank">Tiktok Profile</a>
       </div>
     </div>
     
