Updated portfolio.html and style.css
made it the same layout as the other pages

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -8,12 +8,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header class="header">
-    <h1>My Portfolio</h1>
-    <nav>
+  <header>
+    <nav class="navbar">
+      <div class="logo">xNi</div>
       <ul class="nav-links">
         <li><a href="/index.html">Home</a></li>
-        <li><a href="/about/about.html">About</a></li>
+        <li><a href="/about/about.html" class="active">About Me</a></li>
+        <li><a href="/portfolio/portfolio.html">Portfolio</a></li>
         <li><a href="/skills/skills.html">Skills</a></li>
         <li><a href="/contact/contact.html">Contact</a></li>
       </ul>
