--- a/about/about.html
+++ b/about/about.html
@@ -13,7 +13,7 @@
       <div class="logo">xNi</div>
       <ul class="nav-links">
         <li><a href="/index.html">Home</a></li>
-        <li><a href="/about/about.html" class="active">About</a></li>
+        <li><a href="/about/about.html" class="active">About Me</a></li>
         <li><a href="/portfolio/portfolio.html">Portfolio</a></li>
         <li><a href="/skills/skills.html">Skills</a></li>
         <li><a href="/contact/contact.html">Contact</a></li>
@@ -41,7 +41,7 @@
       </div>
 
       <div class="fun-facts animate-fade delay-1">
-        <h3>🎉 Fun Facts About Me</h3>
+        <h3>Fun Facts About Me</h3>
         <ul>
           <li>🌌 I’m obsessed with binge watching anime</li>
           <li>🎮 I play Valorant and take part of tournaments as a side hustle</li>
