--- a/about/about.html
+++ b/about/about.html
@@ -54,7 +54,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Your Name. All rights reserved.</p>
+    <p>&copy; 2025 Achilles Maling. All rights reserved.</p>
   </footer>
 </body>
 </html>
