--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -13,8 +13,8 @@
       <div class="logo">xNi</div>
       <ul class="nav-links">
         <li><a href="/index.html">Home</a></li>
-        <li><a href="/about/about.html" class="active">About Me</a></li>
-        <li><a href="/portfolio/portfolio.html">Portfolio</a></li>
+        <li><a href="/about/about.html">About Me</a></li>
+        <li><a href="/portfolio/portfolio.html"class="active">Portfolio</a></li>
         <li><a href="/skills/skills.html">Skills</a></li>
         <li><a href="/contact/contact.html">Contact</a></li>
       </ul>
