--- a/about/about.html
+++ b/about/about.html
@@ -8,6 +8,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+    <video autoplay muted loop playsinline class="bg-video-full">
+  <source src="videos/Bg.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
+<div class="video-overlay"></div>
   <header>
     <nav class="navbar">
       <div class="logo">xNi</div>
