--- a/skills/skills.html
+++ b/skills/skills.html
@@ -74,7 +74,7 @@
       <div class="progress-bar"><div style="width: 75%"></div></div>
     </div>
         <div class="skill-card" data-category="Editing">
-      <h3>Reaper (Audio)</h3>
+      <h3>Reaper</h3>
       <div class="progress-bar"><div style="width: 75%"></div></div>
     </div>
         <div class="skill-card" data-category="Analytical">
@@ -82,7 +82,7 @@
       <div class="progress-bar"><div style="width: 75%"></div></div>
     </div>
     <div class="skill-card" data-category="Management">
-      <h3>Decision-Making</h3>
+      <h3>Decision Making</h3>
       <div class="progress-bar"><div style="width: 75%"></div></div>
     </div>
     <div class="skill-card" data-category="Tools">
